feat: add lot of feature

--- a/documentation/classes/CreateMessageDto.html
+++ b/documentation/classes/CreateMessageDto.html
@@ -89,10 +89,16 @@
                                 <a href="#receiverId" >receiverId</a>
                             </li>
                             <li>
+                                <a href="#receiverName" >receiverName</a>
+                            </li>
+                            <li>
+                                <a href="#roomId" >roomId</a>
+                            </li>
+                            <li>
                                 <a href="#senderId" >senderId</a>
                             </li>
                             <li>
-                                <a href="#token" >token</a>
+                                <a href="#senderName" >senderName</a>
                             </li>
                         </ul>
                     </td>
@@ -141,7 +147,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/messages/dto/create-message.dto.ts:10</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/messages/dto/create-message.dto.ts:12</a></div>
                         </td>
                     </tr>
 
@@ -165,6 +171,32 @@
 
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/messages/dto/create-message.dto.ts:28</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="receiverName"></a>
+                    <span class="name">
+                        <span ><b>receiverName</b></span>
+                        <a href="#receiverName"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
                 <tr>
                     <td class="col-md-4">
                         <b>Decorators : </b>
@@ -176,7 +208,33 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/messages/dto/create-message.dto.ts:32</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/messages/dto/create-message.dto.ts:27</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="roomId"></a>
+                    <span class="name">
+                        <span ><b>roomId</b></span>
+                        <a href="#roomId"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="4" class="link-to-prism">src/messages/dto/create-message.dto.ts:4</a></div>
                         </td>
                     </tr>
 
@@ -200,18 +258,9 @@
 
                     </td>
                 </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <b>Decorators : </b>
-                        <br />
-                        <code>
-                            @ApiProperty({description: &#x27;The id of the sender&#x27;, type: Number, required: true, example: 1})<br />
-                        </code>
-                    </td>
-                </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/messages/dto/create-message.dto.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/messages/dto/create-message.dto.ts:20</a></div>
                         </td>
                     </tr>
 
@@ -222,10 +271,10 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="token"></a>
+                    <a name="senderName"></a>
                     <span class="name">
-                        <span ><b>token</b></span>
-                        <a href="#token"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>senderName</b></span>
+                        <a href="#senderName"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -240,13 +289,13 @@
                         <b>Decorators : </b>
                         <br />
                         <code>
-                            @ApiProperty({description: &#x27;The token of the sender&#x27;, type: String, required: true, example: &#x27;eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Im5hdGhhbmN1dmVsaWVyNTlAZ21haWwuY29tIiwic3ViIjo1Nywicm9sZSI6ImpldW5lIiwiaWF0IjoxNjc3NTgzMzEwLCJleHAiOjc2Nzc1ODMzMTB9.RmczbZR_8jn031IVbuepZ1x3K25RYaTD-j60ZqqHAS4&#x27;})<br />
+                            @ApiProperty({description: &#x27;The id of the sender&#x27;, type: Number, required: true, example: 1})<br />
                         </code>
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/messages/dto/create-message.dto.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/messages/dto/create-message.dto.ts:19</a></div>
                         </td>
                     </tr>
 
@@ -268,6 +317,8 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { ApiProperty } from &#x27;@nestjs/swagger&#x27;;
 
 export class CreateMessageDto {
+  roomId: string;
+
   @ApiProperty({
     description: &#x27;The content of the message&#x27;,
     type: String,
@@ -276,19 +327,12 @@ export class CreateMessageDto {
   })
   content: string;
   @ApiProperty({
-    description: &#x27;The token of the sender&#x27;,
-    type: String,
-    required: true,
-    example:
-      &#x27;eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Im5hdGhhbmN1dmVsaWVyNTlAZ21haWwuY29tIiwic3ViIjo1Nywicm9sZSI6ImpldW5lIiwiaWF0IjoxNjc3NTgzMzEwLCJleHAiOjc2Nzc1ODMzMTB9.RmczbZR_8jn031IVbuepZ1x3K25RYaTD-j60ZqqHAS4&#x27;,
-  })
-  token: string;
-  @ApiProperty({
     description: &#x27;The id of the sender&#x27;,
     type: Number,
     required: true,
     example: 1,
   })
+  senderName: string;
   senderId: number;
   @ApiProperty({
     description: &#x27;The id of the receiver&#x27;,
@@ -296,6 +340,7 @@ export class CreateMessageDto {
     required: true,
     example: 2,
   })
+  receiverName: string;
   receiverId: number;
 }
 </code></pre>
