--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -190,6 +190,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/GetArticleDto.html">src/article/dto/get-article.dto.ts</a>
+            </td>
+            <td>class</td>
+            <td>GetArticleDto</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/17)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/UpdateArticleDto.html">src/article/dto/update-article.dto.ts</a>
             </td>
             <td>class</td>
@@ -208,7 +220,7 @@
             <td>Article</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+                <span class="coverage-count">(0/13)</span>
             </td>
         </tr>
         <tr class="low">
@@ -382,6 +394,42 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/ChatGateway.html">src/chat/chat.gateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChatGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/23)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/Room.html">src/chat/chat.gateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>Room</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/User.html">src/chat/chat.gateway.ts</a>
+            </td>
+            <td>interface</td>
+            <td>User</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/CreateImageDto.html">src/images/dto/create-image.dto.ts</a>
             </td>
             <td>class</td>
@@ -472,7 +520,7 @@
             <td>CreateMessageDto</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -496,7 +544,7 @@
             <td>Message</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -508,7 +556,7 @@
             <td>MessagesController</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+                <span class="coverage-count">(0/8)</span>
             </td>
         </tr>
         <tr class="low">
@@ -520,7 +568,7 @@
             <td>MessagesService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
+                <span class="coverage-count">(0/9)</span>
             </td>
         </tr>
         <tr class="low">
@@ -664,7 +712,7 @@
             <td>UtilisateursService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/11)</span>
+                <span class="coverage-count">(0/13)</span>
             </td>
         </tr>
         <tr class="low">
