--- a/documentation/injectables/ArticleService.html
+++ b/documentation/injectables/ArticleService.html
@@ -83,12 +83,15 @@
                                 <a href="#createArticle" >createArticle</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#findAll" >findAll</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#findOne" >findOne</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#remove" >remove</a>
                             </li>
                             <li>
@@ -100,6 +103,7 @@
                                 <a href="#updateArticleImg" >updateArticleImg</a>
                             </li>
                             <li>
+                                    <span class="modifier">Async</span>
                                 <a href="#updateArticleImg_url" >updateArticleImg_url</a>
                             </li>
                         </ul>
@@ -125,7 +129,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/article/article.service.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/article/article.service.ts:10</a></div>
                             </td>
                         </tr>
 
@@ -202,8 +206,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="18"
-                            class="link-to-prism">src/article/article.service.ts:18</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="22"
+                            class="link-to-prism">src/article/article.service.ts:22</a></div>
                 </td>
             </tr>
 
@@ -268,6 +272,7 @@
                 <td class="col-md-4">
                     <a name="findAll"></a>
                     <span class="name">
+                        <span class="modifier">Async</span>
                         <span ><b>findAll</b></span>
                         <a href="#findAll"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -275,15 +280,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>findAll()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>findAll()</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="85"
-                            class="link-to-prism">src/article/article.service.ts:85</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="88"
+                            class="link-to-prism">src/article/article.service.ts:88</a></div>
                 </td>
             </tr>
 
@@ -305,6 +311,7 @@
                 <td class="col-md-4">
                     <a name="findOne"></a>
                     <span class="name">
+                        <span class="modifier">Async</span>
                         <span ><b>findOne</b></span>
                         <a href="#findOne"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -312,15 +319,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>findOne(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>findOne(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="80"
-                            class="link-to-prism">src/article/article.service.ts:80</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="83"
+                            class="link-to-prism">src/article/article.service.ts:83</a></div>
                 </td>
             </tr>
 
@@ -374,6 +382,7 @@
                 <td class="col-md-4">
                     <a name="remove"></a>
                     <span class="name">
+                        <span class="modifier">Async</span>
                         <span ><b>remove</b></span>
                         <a href="#remove"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -381,15 +390,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>remove(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>remove(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="88"
-                            class="link-to-prism">src/article/article.service.ts:88</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="91"
+                            class="link-to-prism">src/article/article.service.ts:91</a></div>
                 </td>
             </tr>
 
@@ -459,8 +469,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="60"
-                            class="link-to-prism">src/article/article.service.ts:60</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="63"
+                            class="link-to-prism">src/article/article.service.ts:63</a></div>
                 </td>
             </tr>
 
@@ -542,8 +552,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="68"
-                            class="link-to-prism">src/article/article.service.ts:68</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="71"
+                            class="link-to-prism">src/article/article.service.ts:71</a></div>
                 </td>
             </tr>
 
@@ -609,6 +619,7 @@
                 <td class="col-md-4">
                     <a name="updateArticleImg_url"></a>
                     <span class="name">
+                        <span class="modifier">Async</span>
                         <span ><b>updateArticleImg_url</b></span>
                         <a href="#updateArticleImg_url"><span class="icon ion-ios-link"></span></a>
                     </span>
@@ -616,15 +627,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>updateArticleImg_url(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>, img_url: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>updateArticleImg_url(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>, img_url: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="74"
-                            class="link-to-prism">src/article/article.service.ts:74</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="77"
+                            class="link-to-prism">src/article/article.service.ts:77</a></div>
                 </td>
             </tr>
 
@@ -690,12 +702,10 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable, NotFoundException } from &#x27;@nestjs/common&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@nestjs/common&#x27;;
 import { PrismaService } from &#x27;../prisma/prisma.service&#x27;;
 import { CreateArticleDto } from &#x27;./dto/create-article.dto&#x27;;
-import { UpdateArticleDto } from &#x27;./dto/update-article.dto&#x27;;
 import { article } from &#x27;@prisma/client&#x27;;
-import { connect } from &#x27;rxjs&#x27;;
 import { RolesEnum } from &#x27;../enum/roles.enum&#x27;;
 import { JwtService } from &#x27;@nestjs/jwt&#x27;;
 import { jwtConstants } from &#x27;../auth/constants/auth.constants&#x27;;
@@ -707,6 +717,12 @@ export class ArticleService {
     private readonly jwtService: JwtService,
   ) {}
 
+  /**
+   *
+   * @param {CreateArticleDto} createArticleDto
+   * @param token
+   * @returns {Promise&lt;article&gt;}
+   */
   async createArticle(
     createArticleDto: CreateArticleDto,
     token,
@@ -716,7 +732,6 @@ export class ArticleService {
       data: articleData,
     });
     const id &#x3D; article.id;
-    // find role and id in token
     const user &#x3D; this.jwtService.verify(token, {
       secret: jwtConstants.secret,
     });
@@ -763,21 +778,21 @@ export class ArticleService {
       data: { url_img: img_url },
     });
   }
-  updateArticleImg_url(id: number, img_url: string): Promise&lt;article&gt; {
+  async updateArticleImg_url(id: number, img_url: string): Promise&lt;article&gt; {
     return this.prisma.article.update({
       where: { id: id },
       data: { url_img: img_url },
     });
   }
-  findOne(id: number): Promise&lt;article&gt; {
+  async findOne(id: number): Promise&lt;article&gt; {
     return this.prisma.article.findUnique({
       where: { id: id },
     });
   }
-  findAll(): Promise&lt;article[]&gt; {
+  async findAll(): Promise&lt;article[]&gt; {
     return this.prisma.article.findMany();
   }
-  remove(id: number): Promise&lt;article&gt; {
+  async remove(id: number): Promise&lt;article&gt; {
     return this.prisma.article.delete({
       where: { id: id },
     });
