--- a/documentation/controllers/UtilisateursController.html
+++ b/documentation/controllers/UtilisateursController.html
@@ -145,14 +145,14 @@
                 <td class="col-md-4">
                     <b>Decorators : </b>
                     <br />
-                    <code>@Roles(RolesEnum.moderateur, RolesEnum.administrateur)<br />@UseGuards(JwtAuthGuard, RoleGuard)<br />@Post(&#x27;assign_conseiller&#x27;)<br />@ApiBody({schema: undefined})<br /></code>
+                    <code>@Roles(RolesEnum.moderateur, RolesEnum.administrateur)<br />@UseGuards(JwtAuthGuard, RoleGuard)<br />@Post(&#x27;assignConseiller&#x27;)<br />@ApiBody({schema: undefined})<br /></code>
                 </td>
             </tr>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="98"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:98</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="140"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:140</a></div>
                 </td>
             </tr>
 
@@ -202,7 +202,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../classes/Message.html" target="_self" >{ StatusCode: number; Message: string; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -239,8 +239,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="68"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:68</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="102"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:102</a></div>
                 </td>
             </tr>
 
@@ -290,7 +290,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../classes/Message.html" target="_self" >{ StatusCode: number; Message: string; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -327,8 +327,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="30"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:30</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="36"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:36</a></div>
                 </td>
             </tr>
 
@@ -378,7 +378,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../interfaces/User.html" target="_self" >{ Message: string; User: any; StatusCode: number; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -409,14 +409,14 @@
                 <td class="col-md-4">
                     <b>Decorators : </b>
                     <br />
-                    <code>@Roles(RolesEnum.moderateur, RolesEnum.administrateur)<br />@UseGuards(JwtAuthGuard, RoleGuard)<br />@Get()<br /></code>
+                    <code>@Get(&#x27;Users&#x27;)<br /></code>
                 </td>
             </tr>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="40"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:40</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="52"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:52</a></div>
                 </td>
             </tr>
 
@@ -424,9 +424,14 @@
             <tr>
                 <td class="col-md-4">
 
+                    <div>
+                    </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../interfaces/User.html" target="_self" >{ statusCode: number; Message: string; Users: any; }</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -459,8 +464,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="78"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:78</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="116"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:116</a></div>
                 </td>
             </tr>
 
@@ -498,7 +503,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../interfaces/User.html" target="_self" >{ StatusCode: number; Message: string; User: any; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -535,8 +540,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="46"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:46</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="68"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:68</a></div>
                 </td>
             </tr>
 
@@ -574,7 +579,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../interfaces/User.html" target="_self" >{ Message: string; statusCode: number; User: any; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -611,8 +616,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="61"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:61</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="91"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:91</a></div>
                 </td>
             </tr>
 
@@ -650,7 +655,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../classes/Message.html" target="_self" >{ StatusCode: number; Message: string; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -687,8 +692,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="52"
-                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:52</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="78"
+                            class="link-to-prism">src/utilisateurs/utilisateurs.controller.ts:78</a></div>
                 </td>
             </tr>
 
@@ -738,7 +743,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <b>Returns : </b>        <code><a href="../classes/Message.html" target="_self" >{ StatusCode: number; Message: string; }</a></code>
 
                     </div>
                     <div class="io-description">
@@ -778,27 +783,53 @@ import { RolesEnum } from &#x27;../enum/roles.enum&#x27;;
 export class UtilisateursController {
   constructor(private readonly utilisateursService: UtilisateursService) {}
 
+  /**
+   *
+   * @param {CreateUtilisateurDto} createUtilisateurDto
+   * @param {RolesEnum} role
+   * @returns {{User: Promise&lt;Utilisateur&gt;, Message: string, StatusCode: number}}
+   */
   @Roles(RolesEnum.conseiller, RolesEnum.moderateur, RolesEnum.administrateur)
   @UseGuards(JwtAuthGuard, RoleGuard)
   @Post()
   create(@Body() createUtilisateurDto: CreateUtilisateurDto, role: RolesEnum) {
-    return this.utilisateursService.createUtilisateur(
-      createUtilisateurDto,
-      role,
-    );
+    return {
+      Message: &#x27;User created Succefuly&#x27;,
+      User: this.utilisateursService.createUtilisateur(
+        createUtilisateurDto,
+        role,
+      ),
+      StatusCode: 201,
+    };
   }
 
-  @Roles(RolesEnum.moderateur, RolesEnum.administrateur)
-  @UseGuards(JwtAuthGuard, RoleGuard)
-  @Get()
+  /**
+   *
+   * @returns {{Users: Promise&lt;Utilisateur[]&gt;, statusCode: number}}
+   */
+  @Get(&#x27;Users&#x27;)
   findAll() {
-    return this.utilisateursService.findAll();
+    return {
+      statusCode: 200,
+      Message: &#x27;Users found successfully&#x27;,
+      Users: this.utilisateursService.findAll(),
+    };
   }
+
+  /**
+   *
+   * @param {string} id
+   * @returns {{User: Promise&lt;Utilisateur&gt;, Message: string, statusCode: number}}
+   */
   @Roles(RolesEnum.moderateur, RolesEnum.administrateur)
   @UseGuards(JwtAuthGuard, RoleGuard)
   @Get(&#x27;:id&#x27;)
   findOne(@Param(&#x27;id&#x27;) id: string) {
-    return this.utilisateursService.findOne(+id);
+    return {
+      Message: &#x27;User found successfully&#x27;,
+      statusCode: 200,
+      User: this.utilisateursService.findOne(+id),
+    };
   }
   @SetMetadata(&#x27;roles&#x27;, [&#x27;conseiller&#x27;])
   @UseGuards(JwtAuthGuard, RoleGuard)
@@ -807,13 +838,21 @@ export class UtilisateursController {
     @Param(&#x27;id&#x27;) id: string,
     @Body() updateUtilisateurDto: UpdateUtilisateurDto,
   ) {
-    return this.utilisateursService.update(+id, updateUtilisateurDto);
+    this.utilisateursService.update(+id, updateUtilisateurDto);
+    return {
+      StatusCode: 200,
+      Message: &#x27;Utilisateur modifié avec succès&#x27;,
+    };
   }
   @Roles(RolesEnum.administrateur, RolesEnum.moderateur)
   @UseGuards(JwtAuthGuard, RoleGuard)
   @Delete(&#x27;:id&#x27;)
   remove(@Param(&#x27;id&#x27;) id: string) {
-    return this.utilisateursService.remove(+id);
+    this.utilisateursService.remove(+id);
+    return {
+      StatusCode: 200,
+      Message: &#x27;Utilisateur supprimé avec succès&#x27;,
+    };
   }
 
   @Roles(RolesEnum.moderateur, RolesEnum.administrateur)
@@ -823,19 +862,27 @@ export class UtilisateursController {
     @Param(&#x27;id&#x27;) id: string,
     @Body() updateUtilisateurDto: UpdatePasswordUtilisateurDto,
   ) {
-    return this.utilisateursService.updatePassword(+id, updateUtilisateurDto);
+    this.utilisateursService.updatePassword(+id, updateUtilisateurDto);
+    return {
+      StatusCode: 200,
+      Message: &#x27;Mot de passe changé avec succès&#x27;,
+    };
   }
   //find by email
   @Roles(RolesEnum.moderateur, RolesEnum.administrateur)
   @UseGuards(JwtAuthGuard, RoleGuard)
   @Get(&#x27;email/:email&#x27;)
   findByEmail(@Param(&#x27;email&#x27;) email: string) {
-    return this.utilisateursService.findOneByEmail(email);
+    return {
+      StatusCode: 200,
+      Message: &#x27;User found successfully&#x27;,
+      User: this.utilisateursService.findOneByEmail(email),
+    };
   }
 
   @Roles(RolesEnum.moderateur, RolesEnum.administrateur)
   @UseGuards(JwtAuthGuard, RoleGuard)
-  @Post(&#x27;assign_conseiller&#x27;)
+  @Post(&#x27;assignConseiller&#x27;)
   @ApiBody({
     schema: {
       type: &#x27;object&#x27;,
@@ -853,11 +900,13 @@ export class UtilisateursController {
     @Body(&#x27;id_jeune&#x27;) id_jeune: number,
     @Body(&#x27;id_conseiller&#x27;) id_conseiller: number,
   ) {
-    return this.utilisateursService.assignConseillerToJeune(
-      id_jeune,
-      id_conseiller,
-    );
+    this.utilisateursService.assignConseillerToJeune(id_jeune, id_conseiller);
+    return {
+      StatusCode: 200,
+      Message: &#x27;Conseiller bien assignée au jeune&#x27;,
+    };
   }
+  //pas de authguard
 }
 </code></pre>
     </div>
