--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -50,6 +50,10 @@
     </ol>
     <ul class="dependencies-list">
         <li>
+            <b>@fastify/static</b> : ^6.10.1</li>
+        <li>
+            <b>@fastify/view</b> : ^7.4.1</li>
+        <li>
             <b>@nestjs-modules/mailer</b> : ^1.8.1</li>
         <li>
             <b>@nestjs/common</b> : ^9.0.0</li>
@@ -63,6 +67,8 @@
             <b>@nestjs/passport</b> : ^9.0.3</li>
         <li>
             <b>@nestjs/platform-express</b> : ^9.0.0</li>
+        <li>
+            <b>@nestjs/platform-socket.io</b> : ^9.4.1</li>
         <li>
             <b>@nestjs/platform-ws</b> : ^9.3.9</li>
         <li>
@@ -78,11 +84,13 @@
         <li>
             <b>cookie-parser</b> : ^1.4.6</li>
         <li>
-            <b>ejs</b> : ^3.1.8</li>
+            <b>ejs</b> : ^3.1.9</li>
         <li>
             <b>express-session</b> : ^1.17.3</li>
         <li>
             <b>handlebars</b> : ^4.7.7</li>
+        <li>
+            <b>hbs</b> : ^4.2.0</li>
         <li>
             <b>nodemailer</b> : ^6.9.1</li>
         <li>
@@ -99,6 +107,12 @@
             <b>rxjs</b> : ^7.2.0</li>
         <li>
             <b>sharp</b> : ^0.31.3</li>
+        <li>
+            <b>socket.io</b> : ^4.6.1</li>
+        <li>
+            <b>socket.io-client</b> : ^4.6.1</li>
+        <li>
+            <b>socketio</b> : ^1.0.0</li>
         <li>
             <b>uuid</b> : ^9.0.0</li>
     </ul>
