--- a/documentation/modules/MessagesModule.html
+++ b/documentation/modules/MessagesModule.html
@@ -168,14 +168,16 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Module } from &#x27;@nestjs/common&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { forwardRef, Module } from &#x27;@nestjs/common&#x27;;
 import { MessagesService } from &#x27;./messages.service&#x27;;
 import { MessagesController } from &#x27;./messages.controller&#x27;;
 import { PrismaService } from &#x27;../prisma/prisma.service&#x27;;
 import { JwtService } from &#x27;@nestjs/jwt&#x27;;
+import { AppModule } from &#x27;../app.module&#x27;;
 
 @Module({
   controllers: [MessagesController],
+  imports: [forwardRef(() &#x3D;&gt; AppModule)],
   providers: [MessagesService, PrismaService, JwtService],
 })
 export class MessagesModule {}
